# ssclip

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
src/: config.rs  copier.rs  error.rs  main.rs  notifier.rs  runner.rs  transfer.rs  watcher.rs
