[package]
name = "ssclip"
version = "0.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = "0.1.3"
crossbeam-channel = "0.5"
notify = "5.0"
serde = { version = "1.0.133", features = ["derive"] }
arboard = "2.1"
image = "0.24"
winreg = "0.10"
open = "3.0"
glob = "0.3.0"
thiserror = "1.0.35"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.confy]
version = "0.4"
features = ["yaml_conf"]
default-features = false

[build-dependencies]
svg_to_ico = "1.2.0"
embed-resource = "1.7"

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
